# QueryVision

./: README.md  gradio_app.py  main.py  pyproject.toml  requirements.txt
config/: constants.py
models/: model_loader.py  model_task.py  modelpredictor.py  predictor.py
utils/: image_utils.py  object_cropper.py  user_input.py  visualization.py
